fix(i18n): add missing translations [CDS 2216]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_pt_PT.json
@@ -7,5 +7,6 @@
   "ovhManagerPccDashboardComponentActivationStatus_inError": "Erro",
   "ovhManagerPccDashboardComponentActivationStatus_needsConfiguration": "Configuração pendente",
   "ovhManagerPccDashboardComponentActivationStatus_awaitingValidation": "Validação pendente",
-  "ovhManagerPccDashboardComponentActivationStatus_unknown": "Estado desconhecido"
+  "ovhManagerPccDashboardComponentActivationStatus_unknown": "Estado desconhecido",
+  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Alojado em {{ datacenter }}"
 }
