--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_es_ES.json
@@ -1,5 +1,6 @@
 {
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "VMware Network Virtualization (NSX)",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "VMware vRealize Operations (vROps)",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Descubrir"
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealize Operations (vROps)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Descubrir",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "VMware y OVHcloud eliminarán el soporte de NSX-v el 15/01/2024."
 }
