--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_it_IT.json
@@ -6,5 +6,7 @@
   "dedicatedCloud_datacenters_disk": "Spazio disco totale",
   "dedicatedCloud_datacenters_order_host": "Ordina un host",
   "dedicatedCloud_datacenters_order_datastore": "Ordina un datastore",
-  "dedicatedCloud_datacenters_loading_error": "Si è verificato un errore durante il caricamento delle informazioni dei datacenter."
+  "dedicatedCloud_datacenters_loading_error": "Si è verificato un errore durante il caricamento delle informazioni dei datacenter.",
+  "dedicatedCloud_datacenters_commercialRange": "Gamme",
+  "dedicatedCloud_datacenters_add_not_available": "L'aggiunta di un nuovo datacenter al momento non è disponibile. Stiamo lavorando per rendere questa funzionalità disponibile a breve."
 }
