--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_es_ES.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "Su plataforma de virtualización VMware en el cloud",
-  "dedicated_clouds_onboarding_description": "¿Necesita más recursos para seguir desarrollando su actividad? ¿Maneja datos sensibles que requieren una infraestructura dedicada con un elevado nivel de seguridad y confidencialidad?",
-  "dedicated_clouds_onboarding_description2": "Con Hosted Private Cloud disfrutará de una infraestructura privada, alojada y gestionada por nuestros equipos, con un índice de disponibilidad global del 99,9 %, con la que podrá concentrarse en su actividad.",
-  "dedicated_clouds_onboarding_description3": "Combinando hardware Intel de última generación y la tecnología de VMware, podemos ofrecerle entornos totalmente aislados y dedicados con los que podrá proteger sus cargas de trabajo más críticas.",
+  "dedicated_clouds_onboarding_title": "Nuestra solución de virtualización administrada",
+  "dedicated_clouds_onboarding_description": "Diseñamos una plataforma similar a su experiencia \"On-Prem\", incluyendo vSphere, vCenter y vROps.",
+  "dedicated_clouds_onboarding_description2": "Con una infraestructura de cloud privado de OVHcloud, disfrutará de un servicio cloud, nuestra capacidad de innovación y reducirá sus costes y su impacto medioambiental.",
+  "dedicated_clouds_onboarding_description3": "Gestionamos el mantenimiento de su infraestructura tanto hardware como software.",
   "dedicated_clouds_onboarding_order": "Contratar",
-  "dedicated_clouds_onboarding_guide1_title": "Despliegue de una máquina virtual",
-  "dedicated_clouds_onboarding_guide1_description": "Cómo desplegar una máquina virtual desde la interfaz vSphere",
-  "dedicated_clouds_onboarding_guide2_title": "Conectarse a la interfaz vSphere",
-  "dedicated_clouds_onboarding_guide2_description": "Cómo conectarse a la interfaz vSphere",
-  "dedicated_clouds_onboarding_guide3_title": "Conectarse por SFTP",
-  "dedicated_clouds_onboarding_guide3_description": "Cómo conectarse a Hosted Private Cloud por SFTP",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud a través de SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Presentación del área de cliente de OVHcloud",
+  "dedicated_clouds_onboarding_guide1_description": "Descubra las posibilidades que ofrece el área de cliente VMware.",
+  "dedicated_clouds_onboarding_guide2_title": "Presentación de Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Descubra la solución Tanzu Kubernetes Grid y sus posibilidades de integración en VMware on OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "Configurar una IP en una máquina virtual",
+  "dedicated_clouds_onboarding_guide3_description": "Una vez que haya creado una máquina virtual, puede asignarle una IP pública o privada",
+  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) Solución de desarrollo by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configure rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. Tres artículos provados en introducción a la interfaz NSX.",
+  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "Seguridad en la red para su infraestructura de infraestructura gestionada por el puerto, la protección y gestión del acceso al vCenter. En este artículo, we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be restricted by allowing only cierto IP addresses or ranges to connect to it. En este artículo, we will cover how to authorize IP addresses for v access in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_description4": "Asimismo, disfrutará de servicios cloud de alto rendimiento con opciones como NSX, vSAN y Veeam Backup (para las copias de seguridad) y Zerto (para su plan de recuperación ante desastres)."
 }
