--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_pl_PL.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "Platforma wirtualizacji VMware w chmurze",
-  "dedicated_clouds_onboarding_description": "Potrzebujesz więcej zasobów, aby rozwijać Twoją działalność? Realizujesz operacje na danych wrażliwych wymagających bezpieczeństwa, poufności i dedykowanej infrastruktury?",
-  "dedicated_clouds_onboarding_description2": "Usługa Hosted Private Cloud działa w oparciu o prywatną infrastrukturę hostowaną w OVHcloud i zarządzaną przez nasze zespoły, gwarantującą poziom dostępności 99,9%, która pozwoli Ci skupić się na kluczowych aspektach Twojej działalności.",
-  "dedicated_clouds_onboarding_description3": "Nasza oferta, stanowiąca doskonałe połączenie sprzętu Intel najnowszej generacji z technologią VMware, zapewnia w pełni izolowane i dedykowane środowiska i gwarantuje bezpieczeństwo Twoich najbardziej krytycznych projektów.",
+  "dedicated_clouds_onboarding_title": "Nasze rozwiązanie do wirtualizacji",
+  "dedicated_clouds_onboarding_description": "Opracowaliśmy platformę podobną do Twoich doświadczeń \"On-Prem\", w tym vSphere, vCenter i vROps.",
+  "dedicated_clouds_onboarding_description2": "Infrastruktura chmury prywatnej OVHcloud pozwala Ci cieszyć się usługą cloud, innowacyjnością OVHcloud i zmniejszyć koszty oraz wpływ na środowisko.",
+  "dedicated_clouds_onboarding_description3": "Zarządzamy utrzymaniem Twojej infrastruktury, zarówno sprzętowej, jak i programowej.",
   "dedicated_clouds_onboarding_order": "Zamów",
-  "dedicated_clouds_onboarding_guide1_title": "Wdrożenie wirtualnej maszyny",
-  "dedicated_clouds_onboarding_guide1_description": "Dowiedz się, jak wdrożyć wirtualną maszynę z poziomu interfejsu vSphere",
-  "dedicated_clouds_onboarding_guide2_title": "Logowanie do interfejsu vSphere",
-  "dedicated_clouds_onboarding_guide2_description": "Sprawdź różne sposoby logowania do vSphere",
-  "dedicated_clouds_onboarding_guide3_title": "Logowanie przez SFTP",
-  "dedicated_clouds_onboarding_guide3_description": "Dowiedz się, jak się zalogować do Private Cloud przez SFTP",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy a virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud via SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Prezentacja Panelu klienta OVHcloud",
+  "dedicated_clouds_onboarding_guide1_description": "Poznaj możliwości Panelu klienta VMware",
+  "dedicated_clouds_onboarding_guide2_title": "Prezentacja Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Poznaj rozwiązanie Tanzu Kubernetes Grid i jego możliwości integracji z VMware on OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "Konfiguracja IP na maszynie wirtualnej",
+  "dedicated_clouds_onboarding_guide3_description": "Po utworzeniu wirtualnej maszyny możesz przypisać jej publiczny lub prywatny adres IP",
+  "dedicated_clouds_onboarding_us_guide1_title": "Dostęp do NSX Interfejs",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software-Defined Network (SDN) solution developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configure rules to access your networks, tworzenie polityki bezpieczeństwa, and quickly deploy the various network services needed to build your infrastructure. This artykuł provides an wprowadzenie do NSX interface.",
+  "dedicated_clouds_onboarding_us_guide2_title": "Do Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can restrict and manage the access to vCenter. W tym artykule, we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be restricted by allowing only określone IP addresses or ranges to connect to it. We will cover how to authorize IP addresses for vCenter access in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_description4": "Korzystasz również z usług w chmurze o wysokiej wydajności z opcjami takimi jak NSX, vSAN i Veeam Backup (do wykonywania kopii zapasowych) — i Zerto (do realizacji planu Disaster Recovery)."
 }
