--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_pt_PT.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "A sua plataforma de virtualização VMware na cloud",
-  "dedicated_clouds_onboarding_description": "Precisa de mais recursos para desenvolver a sua atividade? Trabalha com dados sensíveis que requerem segurança, confidencialidade assim como uma infraestrutura dedicada?",
-  "dedicated_clouds_onboarding_description2": "Com o Hosted Private Cloud, oferecemos-lhe uma infraestrutura privada, alojada e gerida pelas nossas equipas, oferecendo uma taxa de disponibilidade global de 99,9% que lhe permite concentrar-se no seu negócio.",
-  "dedicated_clouds_onboarding_description3": "Combinando na perfeição o hardware Intel de última geração e a tecnologia VMware, as nossas ofertas fornecem ambientes totalmente isolados e dedicados, de forma a proteger as suas cargas de trabalho mais críticas.",
+  "dedicated_clouds_onboarding_title": "A nossa solução de virtualização gerida",
+  "dedicated_clouds_onboarding_description": "Desenvolvemos uma plataforma semelhante à sua experiência \"On-Prem\", incluindo vSphere, vCenter e vROps.",
+  "dedicated_clouds_onboarding_description2": "Com uma infraestrutura de cloud privada OVHcloud, beneficia de um serviço cloud, da nossa capacidade de inovação e reduz os seus custos e o seu impacto ambiental.",
+  "dedicated_clouds_onboarding_description3": "Gerimos a manutenção da sua infraestrutura, tanto hardware como software.",
   "dedicated_clouds_onboarding_order": "Encomendar",
-  "dedicated_clouds_onboarding_guide1_title": "Implementação de uma máquina virtual",
-  "dedicated_clouds_onboarding_guide1_description": "Saiba como implementar uma máquina virtual a partir da interface vSphere",
-  "dedicated_clouds_onboarding_guide2_title": "Aceder à interface vSphere",
-  "dedicated_clouds_onboarding_guide2_description": "Descubra as diferentes formas de se ligar ao vSphere",
-  "dedicated_clouds_onboarding_guide3_title": "Aceder através de SFTP",
-  "dedicated_clouds_onboarding_guide3_description": "Saiba como conectar-se ao seu Private Cloud através de SFTP",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy a virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud via SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Apresentação da Área de Cliente OVHcloud",
+  "dedicated_clouds_onboarding_guide1_description": "Descubra as possibilidades da Área de Cliente VMware",
+  "dedicated_clouds_onboarding_guide2_title": "Apresentação de Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Descubra a solução Tanzu Kubernetes Grid e as suas possibilidades de integração na VMware em OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "Configurar um IP numa máquina virtual",
+  "dedicated_clouds_onboarding_guide3_description": "Depois de criar uma máquina virtual, pode atribuir-lhe um IP público ou privado",
+  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) solução developed by VMware that is ativated from the vCenter and managed directly from the vSphere interface. With NSX, you can configura rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This art provides an introdutório to the NSX interface.",
+  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can restrit and manage the access to vCenter. In this Article, we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Endereços para o vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be RESTRIted by allowing only cers IP enderers or ranges to connect to it. In this Article, we will cover how to authorize endereços IP para o vCenter access in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_description4": "Beneficia igualmente de serviços cloud de alto desempenho, com opções como NSX, vSAN e Veeam Backup (para os seus backups) e Zerto (para o seu plano de recuperação de desastres)."
 }
