--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
@@ -151,5 +151,6 @@
   "sidebar_telephony_type_sipTrunk": "Trunk",
   "sidebar_telephony_type_sip": "SIP",
   "sidebar_telephony_type_fax": "Fax",
-  "sidebar_pci_volume_backup": "Volume Backup"
+  "sidebar_pci_volume_backup": "Volume Backup",
+  "sidebar_vmware_all": "Tutti i tuoi servizi"
 }
