--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_es_ES.json
@@ -1,11 +1,12 @@
 {
   "ovhManagerPccDashboardComponentActivationStatus_beingActivated": "Activando",
-  "ovhManagerPccDashboardComponentActivationStatus_beingDeactivated": "Desactivando",
-  "ovhManagerPccDashboardComponentActivationStatus_cancelling": "Cancelando",
+  "ovhManagerPccDashboardComponentActivationStatus_beingDeactivated": "Desactivando...",
+  "ovhManagerPccDashboardComponentActivationStatus_cancelling": "Cancelando...",
   "ovhManagerPccDashboardComponentActivationStatus_disabled": "Desactivado",
   "ovhManagerPccDashboardComponentActivationStatus_enabled": "Activado",
   "ovhManagerPccDashboardComponentActivationStatus_inError": "En error",
   "ovhManagerPccDashboardComponentActivationStatus_needsConfiguration": "Pendiente de configuración",
   "ovhManagerPccDashboardComponentActivationStatus_awaitingValidation": "Pendiente de validación",
-  "ovhManagerPccDashboardComponentActivationStatus_unknown": "Estado desconocido"
+  "ovhManagerPccDashboardComponentActivationStatus_unknown": "Estado desconocido",
+  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Alojado en {{ datacenter }}"
 }
