--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_it_IT.json
@@ -1,5 +1,6 @@
 {
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "VMware Network Virtualization (NSX)",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "VMware vRealize Operations (vROps)",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Scopri"
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealize Operations (vROps)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Scopri",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "VMware e OVHcloud porranno fine al supporto NSX-v il 15/01/2024."
 }
