--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/translations/Messages_en_GB.json
@@ -24,5 +24,7 @@
   "ovhManagerPccDashboardOptions_security_drp_status_vpn_error": "Error configuring VPN",
   "ovhManagerPccDashboardOptions_security_drp_action_add_configuration": "Add IPs",
   "ovhManagerPccDashboardOptions_security_drp_action_install": "Add DRP",
-  "ovhManagerPccDashboardOptions_security_drp_action_delete": "Delete Zerto DRP"
+  "ovhManagerPccDashboardOptions_security_drp_action_delete": "Delete Zerto DRP",
+  "ovhManagerPccDashboardOptions_heading_conformity": "Compliance",
+  "ovhManagerPccDashboardOptions_heading_vmware_option": "VMware Options"
 }
