--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/translations/Messages_it_IT.json
@@ -14,7 +14,7 @@
   "ovhManagerPccDashboardOptions_certification_actionMenu_payCheckout": "Conferma l’attivazione",
   "ovhManagerPccDashboardOptions_security_term": "Opzioni di conformità settoriale",
   "ovhManagerPccDashboardOptions_security_drp": "Disaster Recovery Plan e Business Continuity Plan ",
-  "ovhManagerPccDashboardOptions_security_drp_status_delivered": "Attivo",
+  "ovhManagerPccDashboardOptions_security_drp_status_delivered": "Attivato",
   "ovhManagerPccDashboardOptions_security_drp_status_delivering": "Installazione in corso...",
   "ovhManagerPccDashboardOptions_security_drp_status_disabling": "Eliminazione in corso...",
   "ovhManagerPccDashboardOptions_security_drp_status_disabled": "Nessuno",
@@ -24,5 +24,7 @@
   "ovhManagerPccDashboardOptions_security_drp_status_vpn_error": "Configurazione della VPN in errore",
   "ovhManagerPccDashboardOptions_security_drp_action_add_configuration": "Aggiungi IP",
   "ovhManagerPccDashboardOptions_security_drp_action_install": "Installa un DRP",
-  "ovhManagerPccDashboardOptions_security_drp_action_delete": "Elimina DRP Zerto "
+  "ovhManagerPccDashboardOptions_security_drp_action_delete": "Elimina DRP Zerto ",
+  "ovhManagerPccDashboardOptions_heading_conformity": "Conformità",
+  "ovhManagerPccDashboardOptions_heading_vmware_option": "Opzioni VMware"
 }
