--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_fr_CA.json
@@ -1,5 +1,6 @@
 {
   "dedicatedCloud_information_title": "Informations générales",
+  "dedicatedCloud_options_title": "Options",
   "dedicatedCloud_description": "Nom",
   "dedicatedCloud_datacenter_delete": "Supprimer le datacentre",
   "dedicatedCloud_datacenter_description": "Description",
@@ -56,6 +57,22 @@
   "dedicatedCloud_datacenter_commercial_name_SDDC-LEGACY-VROPS-WITHOUT-NSX": "SDDC Legacy avec vROps &amp; sans NSX",
   "dedicatedCloud_datacenter_commercial_name_SDDC-LEGACY-WITHOUT-NSX": "SDDC Legacy sans NSX",
   "dedicatedCloud_datacenter_commercial_name_UNKNOWN-UNKNOWN": "Inconnu",
+  "dedicatedCloud_datacenter_commercial_name_vSphere": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-HDS": "vSphere HDS",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-HIPAA": "vSphere HIPAA",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-PCIDSS": "vSphere PCI DSS",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-VROPS": "vSphere avec vROps",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-NSX": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-NSX-VROPS": "vSphere avec vROps",
+  "dedicatedCloud_datacenter_commercial_name_vSphere-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T": "NSX",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-HDS": "NSX HDS",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-PCIDSS": "NSX PCI DSS",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-VROPS": "NSX avec vROps",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-NSX": "NSX",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-NSX-VROPS": "NSX avec vROps",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-UNKNOWN": "NSX",
   "dedicatedCloud_datacenter_host": "Hosts",
   "dedicatedCloud_datacenter_datastore": "Datastores",
   "dedicatedCloud_datacenter_VM_Backup": "VM Backupées",
