--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_CA.json
@@ -1,10 +1,12 @@
 {
   "dedicatedCloud_datacenters_title": "Datacentres",
+  "dedicatedCloud_datacenters_commercialRange": "Gamme",
   "dedicatedCloud_datacenters_add": "Ajout d'un datacentre",
   "dedicatedCloud_datacenters_cpu": "Total CPU",
   "dedicatedCloud_datacenters_ram": "Total RAM",
   "dedicatedCloud_datacenters_disk": "Total espace disque",
   "dedicatedCloud_datacenters_order_host": "Commander un Host",
   "dedicatedCloud_datacenters_order_datastore": "Commander un Datastore",
-  "dedicatedCloud_datacenters_loading_error": "Une erreur est survenue lors du chargement des informations des datacentres."
+  "dedicatedCloud_datacenters_loading_error": "Une erreur est survenue lors du chargement des informations des datacentres.",
+  "dedicatedCloud_datacenters_add_not_available": "L’ajout de nouveau datacentre n’est pas disponible pour le moment. Nous travaillons à rendre cette fonctionnalité disponible très prochainement."
 }
