--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pl_PL.json
@@ -6,5 +6,7 @@
   "dedicatedCloud_datacenters_disk": "Całkowita przestrzeń dyskowa",
   "dedicatedCloud_datacenters_order_host": "Zamów Hosta",
   "dedicatedCloud_datacenters_order_datastore": "Zamów Datastore",
-  "dedicatedCloud_datacenters_loading_error": "Wystąpił błąd podczas pobierania informacji z centrów danych."
+  "dedicatedCloud_datacenters_loading_error": "Wystąpił błąd podczas pobierania informacji z centrów danych.",
+  "dedicatedCloud_datacenters_commercialRange": "Gama",
+  "dedicatedCloud_datacenters_add_not_available": "Dodanie nowego centrum danych nie jest aktualnie dostępne. Pracujemy nad udostępnieniem tej funkcji już wkrótce."
 }
