--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pt_PT.json
@@ -6,5 +6,7 @@
   "dedicatedCloud_datacenters_disk": "Total espaço em disco",
   "dedicatedCloud_datacenters_order_host": "Encomendar Host",
   "dedicatedCloud_datacenters_order_datastore": "Encomendar Datastore",
-  "dedicatedCloud_datacenters_loading_error": "Erro ao carregar informação sobre os datacenters."
+  "dedicatedCloud_datacenters_loading_error": "Erro ao carregar informação sobre os datacenters.",
+  "dedicatedCloud_datacenters_commercialRange": "Gama",
+  "dedicatedCloud_datacenters_add_not_available": "A adição de um novo datacenter não está atualmente disponível. Estamos a trabalhar para disponibilizar esta funcionalidade muito em breve."
 }
