--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_de_DE.json
@@ -2,15 +2,15 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Keine Zusatzoptionen",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Keine Zusatzoptionen",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "VMware Network Virtualization (NSX)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "VMware Network Virtualization (NSX)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Mit NSX können Sie ganz einfach Zugangsregeln zu Ihren Netzwerken konfigurieren, eine Security Policy definieren und innerhalb von nur wenigen Minuten verschiedene für die Erstellung Ihrer Infrastruktur nötige Netzwerkservices einrichten.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "VMware vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "VMware vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Mit NSX-v konfigurieren Sie die Zugangsregeln zu Ihren Netzwerken, erstellen Sie Ihre Sicherheitseinstellungen und implementieren Sie innerhalb weniger Minuten die verschiedenen Netzwerkservices, die Sie für Ihre Infrastruktur benötigen.",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Steuern Sie mithilfe von vROps Ihre Infrastruktur, aktivieren Sie das Monitoring für virtuelle Maschinen, ermitteln Sie Anomalien und planen Sie problemlos zukünftigen Ressourcenbedarf, um die Dienstqualität (QoS) Ihrer Plattform sicherzustellen.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "VMware Network Virtualization (NSX) und VMware vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "VMware Network Virtualization (NSX) und VMware vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "<p>Mit NSX konfigurieren Sie ganz einfach Zugangsregeln zu Ihren Netzwerken, definieren eine Security Policy und deployen innerhalb von nur wenigen Minuten verschiedene für die Erstellung Ihrer Infrastruktur notwendige Netzwerkdienste.</p><p>Mithilfe von vROps steuern Sie Ihre Infrastruktur, aktivieren das Monitoring für virtuelle Maschinen, ermitteln Anomalien und planen problemlos zukünftigen Ressourcenbedarf, um die Dienstqualität (QoS) Ihrer Plattform sicherzustellen<p>",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) und vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) und vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Mit NSX-v konfigurieren Sie die Zugangsregeln zu Ihren Netzwerken, erstellen Sie Ihre Sicherheitseinstellungen und implementieren Sie innerhalb weniger Minuten die verschiedenen Netzwerkservices, die Sie für Ihre Infrastruktur benötigen.</p><p>Steuern Sie mithilfe von vROps Ihre Infrastruktur, aktivieren Sie das Monitoring für virtuelle Maschinen, ermitteln Sie Anomalien und planen Sie problemlos zukünftigen Ressourcenbedarf, um die Dienstqualität (QoS) Ihrer Plattform sicherzustellen.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS) Zertifizierung",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_pcidss": "Kreditkartendaten sind Ziel zahlreicher Pirating- und Phishing-Versuche. Dank PCI DSS hat OVHcloud strengste Sicherheitsmaßnahmen umgesetzt, um ein maximales Sicherheitsniveau für Ihre Zahlungsinfrastrukturen zu gewährleisten.",
