--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_es_ES.json
@@ -2,15 +2,15 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Sin opción adicional",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Sin opción adicional",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "VMware Network Virtualization (NSX)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "VMware Network Virtualization (NSX)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Con NSX podrá configurar las reglas de acceso a sus redes, crear su política de seguridad y desplegar en cuestión de minutos los diferentes servicios de redes necesarios para construir su infraestructura.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "VMware vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "VMware vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Con NSX-v podrá configurar las reglas de acceso a sus redes, crear su política de seguridad y desplegar en cuestión de minutos los diferentes servicios de red necesarios para construir su infraestructura.",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Con vROps, podrá controlar su infraestructura, activando la monitorización de sus máquinas virtuales, detectando cualquier anomalía e identificando fácilmente los recursos que necesita para garantizar la calidad del servicio (QoS) de su plataforma.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "VMware Network Virtualization (NSX) y VMware vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "VMware Network Virtualization (NSX) y VMware vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "<p>Con NSX, podrá configurar las reglas de acceso a sus redes, crear su política de seguridad y desplegar en pocos minutos los distintos servicios de redes necesarios para construir su infraestructura.</p> <p>Con vROps, podrá controlar su infraestructura, activando la monitorización de sus máquinas virtuales, detectando cualquier anomalía e identificando fácilmente los recursos que necesita para garantizar la calidad del servicio (QoS) de su plataforma.</p>",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) y vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) y vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Con NSX-v podrá configurar las reglas de acceso a sus redes, crear su política de seguridad y desplegar en cuestión de minutos los diferentes servicios de red necesarios para construir su infraestructura.</p><p>Con vROps, podrá controlar su infraestructura, activando la monitorización de sus máquinas virtuales, detectando cualquier anomalía e identificando fácilmente los recursos que necesita para garantizar la calidad del servicio (QoS) de su plataforma.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Certificación Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_pcidss": "Los datos de las tarjetas bancarias son el objetivo de numerosos intentos de pirateo y fraude. Gracias a la norma PCI DSS, OVHcloud adopta las medidas de seguridad más sólidas del sector para garantizar un nivel de seguridad óptimo en sus infraestructuras de pago.",
