--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_de_DE.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "Ihre VMware-Virtualisierungsplattform in der Cloud",
-  "dedicated_clouds_onboarding_description": "Sie brauchen mehr Ressourcen, um Ihre Geschäftsaktivität zu entfalten? Arbeiten Sie mit sensiblen Daten, die Sicherheit, Vertraulichkeit und eine dedizierte Infrastruktur erfordern?",
-  "dedicated_clouds_onboarding_description2": "Mit Hosted Private Cloud bieten wir Ihnen eine private Infrastruktur an. Unsere Teams managen und hosten sie mit einer Gesamtverfügbarkeitsrate von 99,9 %. Sie können sich ganz auf Ihr Kerngeschäft konzentrieren.",
-  "dedicated_clouds_onboarding_description3": "Unsere Angebote bieten komplett isolierte und dedizierte Umgebungen, um Ihre kritischsten Workloads abzusichern. Hier ergänzen sich die neueste Intel-Hardware und die Technologie von VMware perfekt.",
+  "dedicated_clouds_onboarding_title": "Unsere gemanagte Virtualisierungslösung",
+  "dedicated_clouds_onboarding_description": "Wir haben eine Plattform entwickelt, die Ihrem \"On-Prem\"-Experiment ähnelt, darunter vSphere, vCenter und vROps.",
+  "dedicated_clouds_onboarding_description2": "Mit einer Private Cloud Infrastruktur von OVHcloud profitieren Sie von einer Cloud-Dienstleistung, unserer Innovationsfähigkeit und reduzieren Ihre Kosten und Ihre Umweltauswirkungen.",
+  "dedicated_clouds_onboarding_description3": "Wir verwalten die Instandhaltung Ihrer Infrastruktur, sowohl Hard- als auch Software.",
   "dedicated_clouds_onboarding_order": "Bestellen",
-  "dedicated_clouds_onboarding_guide1_title": "Virtuelle Maschine deployen",
-  "dedicated_clouds_onboarding_guide1_description": "Hier erfahren Sie, wie Sie eine virtuelle Maschine über das vSphere Interface deployen",
-  "dedicated_clouds_onboarding_guide2_title": "Mit dem vSphere Interface verbinden",
-  "dedicated_clouds_onboarding_guide2_description": "Entdecken Sie die verschiedenen Methoden, um sich auf vSphere einzuloggen",
-  "dedicated_clouds_onboarding_guide3_title": "Via SFTP verbinden",
-  "dedicated_clouds_onboarding_guide3_description": "Hier erfahren Sie, wie Sie sich via SFTP mit Ihrer Private Cloud verbinden",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy a virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud via SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Vorstellung des OVHcloud Kundencenters",
+  "dedicated_clouds_onboarding_guide1_description": "Entdecken Sie die Möglichkeiten Ihres VMware Kundencenters",
+  "dedicated_clouds_onboarding_guide2_title": "Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Entdecken Sie die Tanzu Kubernetes Grid Lösung und deren Möglichkeiten zur Integration in VMware bei OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "IP auf einer virtuellen Maschine konfigurieren",
+  "dedicated_clouds_onboarding_guide3_description": "Nachdem Sie eine virtuelle Maschine erstellt haben, können Sie dieser eine öffentliche oder private IP-Adresse zuweisen",
+  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) Lösung developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configure rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This provide artikel an einleitung to the NSX interface.",
+  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal Infrastructure, you can restrict and manage the access to vCenter. In this article: we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be restricted by allowing only bestimmte IP addresses or ranges to connect to it. In this article: we will cover how to authorize IP addresses for vCenter access in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_description4": "Sie verfügen auch über hochperformante Cloud-Dienste mit Optionen wie NSX, vSAN und Veeam Backup (für Ihre Backups) - und Zerto (für Ihren Disaster Recovery Plan)."
 }
