--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_en_GB.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "Your VMware virtualisation platform in the cloud",
-  "dedicated_clouds_onboarding_description": "Need more resources to develop your business? Need to process sensitive data that requires strict security, confidentiality and a dedicated infrastructure?",
-  "dedicated_clouds_onboarding_description2": "With our Hosted Private Cloud solutions, you get a private infrastructure that has a 99.9% availability rate, and is hosted and managed by our teams — leaving you to focus on your core business.",
-  "dedicated_clouds_onboarding_description3": "We combine the power of next-generation Intel hardware with VMware technology, to deliver you fully-isolated, dedicated environments that can handle the most critical workloads.",
+  "dedicated_clouds_onboarding_title": "Our managed virtualisation solution",
+  "dedicated_clouds_onboarding_description": "We've designed a platform similar to your on-prem experience, including vSphere, vCenter and vROps.",
+  "dedicated_clouds_onboarding_description2": "With an OVHcloud private cloud infrastructure, you get a cloud service, our ability to innovate, and reduce your costs and environmental impact.",
+  "dedicated_clouds_onboarding_description3": "We manage the maintenance of your hardware and software infrastructure.",
   "dedicated_clouds_onboarding_order": "Order",
-  "dedicated_clouds_onboarding_guide1_title": "Virtual machine deployment",
-  "dedicated_clouds_onboarding_guide1_description": "Find out how to deploy a virtual machine via the vSphere interface",
-  "dedicated_clouds_onboarding_guide2_title": "Connect to the vSphere interface",
-  "dedicated_clouds_onboarding_guide2_description": "Learn about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_guide3_description": "Find out how to log in to your Private Cloud via SFTP",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy a virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud via SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Introduction to the OVHcloud Control Panel",
+  "dedicated_clouds_onboarding_guide1_description": "Explore the possibilities in the VMware Control Panel",
+  "dedicated_clouds_onboarding_guide2_title": "Introduction to Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Discover the Tanzu Kubernetes Grid solution and its integration capabilities in VMware on OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "Configure an IP address on a virtual machine",
+  "dedicated_clouds_onboarding_guide3_description": "After you create a virtual machine, you can assign it a public or private IP address",
+  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software-Defined Network (SDN) solution developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configure rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This article provides an introduction to the NSX interface.",
+  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can restrict and manage the access to vCenter. In this article, we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorise IP Addresses for vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be restricted by allowing only certain IP addresses or ranges to connect to it. In this article, we will cover how to authorise IP addresses for vCenter access in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_description4": "You also get high-performance cloud services, with options like NSX, vSAN, and Veeam Backup (for your backups) ------ and Zerto (for your disaster recovery plan)."
 }
