--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_it_IT.json
@@ -1,19 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "La tua piattaforma di virtualizzazione VMware nel Cloud",
-  "dedicated_clouds_onboarding_description": "Hai bisogno di più risorse per sviluppare la tua attività o tratti dati sensibili che richiedono sicurezza, confidenzialità e un’infrastruttura dedicata?",
-  "dedicated_clouds_onboarding_description2": "La soluzione Hosted Private Cloud è privata, ospitata e gestita dai team OVHcloud, ha un tasso di disponibilità globale del 99,9% e permette di concentrarsi sul proprio core business.",
-  "dedicated_clouds_onboarding_description3": "Combinazione perfetta di hardware Intel di ultima generazione e tecnologia VMware, i servizi proposti forniscono ambienti totalmente isolati e dedicati per proteggere anche i carichi di lavoro più critici.",
+  "dedicated_clouds_onboarding_title": "La nostra soluzione di virtualizzazione gestita",
+  "dedicated_clouds_onboarding_description": "Abbiamo progettato una piattaforma simile a quella utilizzata per l'esperimento \"On-Prem\", che include vSphere, vCenter e vROps.",
+  "dedicated_clouds_onboarding_description2": "Con un'infrastruttura di Cloud privato OVHcloud usufruisci di un servizio Cloud, della nostra capacità di innovazione e riduci i costi e l'impatto ambientale.",
+  "dedicated_clouds_onboarding_description3": "OVHcloud gestisce la manutenzione della tua infrastruttura sia hardware che software.",
   "dedicated_clouds_onboarding_order": "Ordina",
-  "dedicated_clouds_onboarding_guide1_title": "Creare una macchina virtuale",
-  "dedicated_clouds_onboarding_guide1_description": "Come avviare una macchina virtuale dall'interfaccia vSphere",
-  "dedicated_clouds_onboarding_guide2_title": "Connessione all’interfaccia vSphere",
-  "dedicated_clouds_onboarding_guide2_description": "Come accedere a vSphere con diverse modalità",
-  "dedicated_clouds_onboarding_guide3_title": "Connessione in SFTP",
-  "dedicated_clouds_onboarding_guide3_description": "Come accedere al Private Cloud tramite SFTP",
-  "dedicated_clouds_onboarding_us_guide1_title": "Deploying a virtual machine",
-  "dedicated_clouds_onboarding_us_guide1_description": "Find out how to deploy a virtual machine in the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_title": "Logging in to the vSphere interface",
-  "dedicated_clouds_onboarding_us_guide2_description": "Find out about the different ways you can log in to vSphere",
-  "dedicated_clouds_onboarding_us_guide3_title": "Logging in via SFTP",
-  "dedicated_clouds_onboarding_us_guide3_description": "Find out how to log in to your Private Cloud via SFTP"
+  "dedicated_clouds_onboarding_guide1_title": "Presentazione dello Spazio Cliente OVHcloud",
+  "dedicated_clouds_onboarding_guide1_description": "Scopri le funzionalità del tuo Spazio Cliente VMware",
+  "dedicated_clouds_onboarding_guide2_title": "Presentazione di Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Scopri la soluzione Tanzu Kubernetes Grid e le sue possibilità di integrazione in VMware on OVHcloud",
+  "dedicated_clouds_onboarding_guide3_title": "Configurare un IP su una macchina virtuale",
+  "dedicated_clouds_onboarding_guide3_description": "Dopo aver creato una macchina virtuale, puoi assegnargli un IP pubblico o privato",
+  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) soluzione developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configura rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This articolo provid an introduttion to the NSX interface.",
+  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
+  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can limit and manage the access to vCenter. In this account, we go over how to change the access policy for vCenter in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
+  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be limited by allowing only determinati IP addresses or file to connect to it it. In this account, we will cover how to authorize for vCenter access in the OVHcloud Manager.",
+  "dedicated_clouds_onboarding_description4": "e servizi Cloud high performance, con opzioni come NSX, vSAN e Veeam Backup (per i tuoi backup) e Zerto (per il tuo Disaster Recovery Plan)."
 }
