--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_en_GB.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_en_GB.json
@@ -193,5 +193,20 @@
   "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
   "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
   "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_no_gtr": "No GRT"
+  "telecom_pack_migration_no_gtr": "No GRT",
+  "telecom_pack_migration_meeting_slots": "Book an appointment",
+  "telecom_pack_migration_meeting_description": "The plan you have selected will not require intervention from a technician.",
+  "telecom_pack_migration_fake_meeting": "None of these dates are convenient for me — I would like to be contacted to arrange another time slot with a technician.",
+  "telecom_pack_migration_no_fake_meeting": "Choose a meeting schedule.",
+  "telecom_pack_migration_programmed_meeting_select": "Please choose the time slot for installing your line.",
+  "telecom_pack_migration_programmed_meeting": "An appointment is scheduled on {{day}} between {{start}} and {{end}}.",
+  "telecom_pack_migration_contact_name": "Contact number to send to technician",
+  "telecom_pack_migration_no_erdv_info": "A technician will contact you as soon as possible to arrange an intervention date for your site.",
+  "telecom_pack_migration_contact_name_info": "Please provide us with the name of the person who can meet the technician on the date of the appointment.",
+  "telecom_pack_migration_mandatory_field": "Fields marked with an asterisk are mandatory.",
+  "telecom_pack_migration_confirm": "Confirm selection",
+  "telecom_pack_migration_contract_action_create": "A new line will be created at the address:",
+  "telecom_pack_migration_contract_meeting": "A time slot is scheduled on {{ day }} between {{ start }} and {{ end }}.",
+  "telecom_pack_migration_contract_meeting_contact": "I will be contacted by a technician to agree on a time slot.",
+  "telecom_pack_migration_meeting_error": "Oops! An error occurred while retrieving the available time slots."
 }
