--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
@@ -181,12 +181,27 @@
   "telecom_pack_migration_confirm_modem_rental_recycled": "Wynajem modemu z recyklingu",
   "telecom_pack_migration_offers_debit_mention_1": "(1) Aż do 92 Mb/s łączących się w VDSL i 22 Mb/s w ADSL, w zależności od dostępności.",
   "telecom_pack_migration_offers_debit_mention_2": "(2) Do 36 Mb/s w VDSL i 1 Mb/s w ADSL, w zależności od dostępności.",
-  "telecom_pack_migration_modem_keep": "Chcę zachować modem ({{ price }} netto/m-c)",
+  "telecom_pack_migration_modem_keep": "Chcę zachować mój modem ({{ price }} netto/m-c)",
   "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
   "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
   "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
   "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
   "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
   "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_no_gtr": "Brak GTR"
+  "telecom_pack_migration_no_gtr": "Brak GTR",
+  "telecom_pack_migration_meeting_slots": "Umówienie wizyty",
+  "telecom_pack_migration_meeting_description": "Wybrana przez Ciebie oferta wymaga interwencji technika.",
+  "telecom_pack_migration_fake_meeting": "Nie pasuję do żadnego z poniższych spotkań. Chcę się z nim skontaktować, aby uzgodnić to z innym technikiem.",
+  "telecom_pack_migration_no_fake_meeting": "Wybieram harmonogram randkowy.",
+  "telecom_pack_migration_programmed_meeting_select": "Wybierz czas instalacji linii.",
+  "telecom_pack_migration_programmed_meeting": "Spotkanie zostało zaplanowane na {{day}} między {{start}} i {{end}}.",
+  "telecom_pack_migration_contact_name": "Nazwa kontaktu przekazana technikowi",
+  "telecom_pack_migration_no_erdv_info": "Technik skontaktuje się z Tobą tak szybko, jak to możliwe, aby ustalić datę interwencji na stronie.",
+  "telecom_pack_migration_contact_name_info": "Prosimy o podanie nazwiska osoby, która może powitać technika w dniu spotkania.",
+  "telecom_pack_migration_mandatory_field": "Pola oznaczone gwiazdką są obowiązkowe.",
+  "telecom_pack_migration_confirm": "Potwierdź wybór",
+  "telecom_pack_migration_contract_action_create": "Nowa linia zostanie utworzona na stronie:",
+  "telecom_pack_migration_contract_meeting": "Spotkanie zostało zaplanowane na {{ day }} między {{ start }} i {{ end }}.",
+  "telecom_pack_migration_contract_meeting_contact": "Skontaktujemy się z nim przez technika, aby umówić się na spotkanie.",
+  "telecom_pack_migration_meeting_error": "Ojej! Wystąpił błąd podczas pobierania dat dostępnych spotkań."
 }
